--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -1,5 +1,5 @@
 /**
- * @Author:      qinbb
+ * @Author:      qiaozp
  * @DateTime:    2018-01-31 17:04:37
  * @Description: sass中使用 @mixin声明混合，可以传递参数，参数名以$符号开始，多个参数以逗号分开，
  * 也可以给参数设置默认值。声明的 @mixin通过 @include来调用。
