按钮图片的引用

--- a/src/assets/css/btn.scss
+++ b/src/assets/css/btn.scss
@@ -133,3 +133,10 @@ $panGreen: #30B08F;
     margin-left: 5px;
 }
 
+.check{background: url(../img/check.png) no-repeat center center !important;}
+.resources{background: url(../img/resources.png) no-repeat center center !important;}
+.update{background: url(../img/update.png) no-repeat center center !important;}
+.pass{background: url(../img/password.png) no-repeat center center !important;}
+.delete{background: url(../img/delete.png) no-repeat center center !important;}
+.role{background: url(../img/role.png) no-repeat center center !important;}
+.rules{background: url(../img/rules.png) no-repeat center center !important;}
