--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -257,7 +257,7 @@ tbody tr:nth-child(odd){
     width: 160px !important;
 }
 .el-input__icon{
-    line-height: 30px;
+    line-height: 33px !important;
 }
 .el-pager li.active{
     color: #fff;
