--- a/src/assets/css/btn.scss
+++ b/src/assets/css/btn.scss
@@ -147,6 +147,8 @@ $panGreen: #30B08F;
 .role{background: url(../img/role.png) no-repeat center center !important;}
 .rules{background: url(../img/rules.png) no-repeat center center !important;}
 .order{background: url(../img/work-order.png) no-repeat center center !important;}
+.payment{background: url(../img/payment.png) no-repeat center center !important;}
+.sales{background: url(../img/sales-gas.png) no-repeat center center !important;}
 .gnore{background: url(../img/gnore.png) no-repeat center center !important;}
 .before-wait{background: url(../img/before-wait.png) no-repeat center center !important;}
 .waiting{
