数据的修改

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -119,6 +119,9 @@ tbody tr:nth-child(odd){
 .width150 .el-input{
     width: 150px !important;
 }
+.barCode .el-input{
+    width: 240px !important;
+}
 //车辆数选择框清除按钮
 .closeI{
     position: absolute;
